--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -123,7 +123,7 @@
             "Arranger": extractMetadataTag(meiDoc, "arranger"),
             "Librettist": extractMetadataTag(meiDoc, "librettist"),
             "Original Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical sourve"), //Exclude CdC Number
-            "Text Incipit(s)": extractMetadataTag(meiDoc, "incipText"),
+            "Text Incipit(s)": extractMetadataTag(meiDoc, "inciptText"),
             "Source Type": extractMetadataTag(meiDoc, "media"),
             "Manuscript Library Location": extractMetadataTag(meiDoc, "library"),
             "Manuscript Classmark": extractMetadataTag(meiDoc, "classmark"),
