added musical and poetic form searches

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,6 +24,12 @@
         <h3>Search by text incipit:</h3>
         <input type="text" name="incipit" placeholder="Search by text incipit">
 
+        <h3>Search by musical form:</h3>
+        <input type="text" name="musForm" placeholder="Search by musical form">
+
+        <h3>Search by poetic form:</h3>
+        <input type="text" name="poetForm" placeholder="Search by poetic form">
+
         <h3>Search by Cle du Caveau number:</h3>
         <p>Format needs to be 0000. For example, to get number 2, search '0002'.</p>
         <input type="text" name="cdcNumber" placeholder="Search by CdC Number">
