added banner image

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,13 +15,13 @@
 <body>
     <div class="navbar" style="position: relative; display: flex; align-items: center; height: 100px; padding: 0 20px;">
         <!-- Home Icon on the left -->
-        <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none; position: absolute; left: 20px;">
+        <a asp-area="" asp-controller="Home" asp-action="Index" style="color: darkblue; text-decoration: none; position: absolute; left: 20px;">
             <i class="fas fa-home" style="font-size: 24px;"></i>
         </a>
 
-        <!-- Centered Text -->
-        <h1 style="margin: 0; width: 100%; text-align: center;">
-            <a asp-area="" asp-controller="Home" asp-action="Index" style="color: white; text-decoration: none;">
+        <!-- Right Text -->
+        <h1 style="margin: 0; width: 100%; text-align: right;">
+            <a asp-area="" asp-controller="Home" asp-action="Index" style="color: darkblue; text-decoration: none;">
                 The <i>air connus</i> Index
             </a>
         </h1>
