--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         <!-- Right Text -->
         <h1 style="margin: 0; width: 100%; text-align: right;">
             <a asp-area="" asp-controller="Home" asp-action="Index" style="color: darkblue; text-decoration: none;">
-                The <i>air connus</i> Index
+                The <i>airs connus</i> Index
             </a>
         </h1>
     </div>
