--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script src="~/lib/jquery/dist/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="navbar" style="position: relative; display: flex; align-items: center; height: 100px; padding: 0 20px;">
+    <div class="navbar" style="position: relative; display: flex; align-items: center; height: 100px; padding: 0 20px; background-image: url('/lib/img/Web_Banner.png'); background-size: cover; background-position: center;">
         <!-- Home Icon on the left -->
         <a asp-area="" asp-controller="Home" asp-action="Index" style="color: darkblue; text-decoration: none; position: absolute; left: 20px;">
             <i class="fas fa-home" style="font-size: 24px;"></i>
