fixed musical source

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -138,7 +138,7 @@
             "Composer": extractMetadataTag(meiDoc, "composer"),
             "Arranger": extractMetadataTag(meiDoc, "arranger"),
             "Librettist": extractMetadataTag(meiDoc, "librettist"),
-            "Original Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical sourve"), //Exclude CdC Number
+            "Original Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical source"), //Exclude CdC Number
             "Text Incipit(s)": extractMetadataTag(meiDoc, "inciptText"),
             "Source Type": extractMetadataTag(meiDoc, "media"),
             "Manuscript Library Location": extractMetadataTag(meiDoc, "library"),
