MIDI player actually works this time

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -43,12 +43,10 @@
 <div>
     <a href="@Url.Action("DownloadFile", "Home", new { fileName = ViewBag.FileName })" class="btn btn-primary">Download MEI File</a>
 </div>
-
+<br />
 <!-- MIDI Playback and stop Button -->
-<div style="margin-top: 20px;">
-    <button id="play-midi" class="btn btn-success">Play MIDI</button>
-    <button id="stop-midi" class="btn btn-danger">Stop MIDI</button>
-</div>
+<button id="play-midi" class="btn btn-primary">Get MIDI</button><br />
+<midi-player id="midi-player" sound-font visualizer="#myVisualizer"></midi-player>
 
 <!-- Fixed-size container for the notation rendering -->
 <div id="notation-container" style="max-width: 1800px; max-height: 1400px; border: 2px solid #ccc; margin: 20px auto; display: flex; justify-content: center; align-items: center; overflow: auto;">
@@ -62,8 +60,8 @@
 <script src="https://www.verovio.org/javascript/latest/verovio-toolkit.js"></script>
 
 <!-- Include the MIDI.js library -->
-<script src="https://cdn.rawgit.com/mik3y/midi.js/master/dist/MIDI.js"></script>
-<script src="https://www.midijs.net/lib/midi.js"></script>
+<script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
+
 
 <script>
     // Function to extract content between MEI tags and handle attributes, returning all values concatenated
@@ -138,15 +136,15 @@
         // Generate the MIDI data from MEI content
         var midiData = vrvToolkit.renderToMIDI();
 
-        let midiString = 'data:audio/midi;base64,' + midiData
-        MIDIjs.play(midiString);
+        // Convert the MIDI data to a base64 data URI
+        let midiString = 'data:audio/midi;base64,' + midiData;
 
+        // Set the source of the midi-player to the generated MIDI data URI
+        var midiPlayer = document.getElementById('midi-player');
+        midiPlayer.setAttribute('src', midiString);
     }
 
-    // Function to stop playing the MIDI
-    function stopMIDI() {
-        MIDIjs.stop()
-    }
+
 
 
     function processMetadata() {
@@ -216,9 +214,6 @@
     // Add event listener to the Play MIDI button
     document.getElementById("play-midi").addEventListener("click", function () {
         playMIDI(); // Trigger the MIDI playback
-    });
-    document.getElementById("stop-midi").addEventListener("click", function () {
-        stopMIDI(); // Trigger the MIDI stop
     });
 
     // Initial rendering of the notation
