added MIDI button instruction message

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -44,6 +44,7 @@
     <a href="@Url.Action("DownloadFile", "Home", new { fileName = ViewBag.FileName })" class="btn btn-primary">Download MEI File</a>
 </div>
 <br />
+<pr>Click "Get MIDI" and then the play button to hear the music: </pr>
 <!-- MIDI Playback and stop Button -->
 <button id="play-midi" class="btn btn-primary">Get MIDI</button><br />
 <midi-player id="midi-player" sound-font visualizer="#myVisualizer"></midi-player>
