midi automatically loads

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -44,9 +44,8 @@
     <a href="@Url.Action("DownloadFile", "Home", new { fileName = ViewBag.FileName })" class="btn btn-primary">Download MEI File</a>
 </div>
 <br />
-<pr>Click "Get MIDI" and then the play button to hear the music: </pr>
+<p>MIDI player: </p>
 <!-- MIDI Playback and stop Button -->
-<button id="play-midi" class="btn btn-primary">Get MIDI</button><br />
 <midi-player id="midi-player" sound-font visualizer="#myVisualizer"></midi-player>
 
 <!-- Fixed-size container for the notation rendering -->
@@ -213,9 +212,10 @@
 
 
     // Add event listener to the Play MIDI button
-    document.getElementById("play-midi").addEventListener("click", function () {
-        playMIDI(); // Trigger the MIDI playback
-    });
+    window.onload = function () {
+        playMIDI(); // Trigger the MIDI playback automatically when the page loads
+    };
+
 
     // Initial rendering of the notation
     processMetadata();
